# 3d-renderer

./: .clangd  CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  Obj.h  Renderer.cpp  Renderer.h  X11Display.cpp  X11Display.hpp  life.cpp  main.cpp  render.cpp  tga.cpp
lib/: Obj.h  Renderer.cpp  Renderer.h  World.cpp  World.h  X11Display.cpp  X11Framebuffer.cpp  X11Framebuffer.hpp  X11Window.cpp  X11Window.hpp
